name added for SEO

--- a/events/11-trail-barreira.html
+++ b/events/11-trail-barreira.html
@@ -20,7 +20,7 @@
     <title>Portfolio Details - 	11º Trail Off-Road da Barreira </title>
     <meta content="	11º Trail Off-Road da Barreira - Fevereiro - 2025" name="description">
     <meta
-        content="Trail, Barreira, correr, desporto, competicao, equipa, offroad"
+        content="Trail, Barreira, correr, desporto, competicao, equipa, offroad, Tiago Batista"
         name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
