--- a/events/50-anos-25abril-leiria.html
+++ b/events/50-anos-25abril-leiria.html
@@ -19,7 +19,7 @@
 
     <title>Portfolio Details - 50 Anos 25 Abril - Leiria</title>
     <meta content="50 Anos 25 Abril" name="description">
-    <meta content="50 anos, 25 abril, leiria, cinquentenario, revolucao" name="keywords">
+    <meta content="50 anos, 25 abril, leiria, cinquentenario, revolucao, Tiago Batista" name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
