--- a/events/7-chicharo.html
+++ b/events/7-chicharo.html
@@ -20,7 +20,7 @@
     <title>Portfolio Details - 7º Trail do Chícharo da Serra </title>
     <meta content="7º Trail do Chícharo da Serra  - Novembro - 2024" name="description">
     <meta
-        content="Trail, Fátima, correr, desporto, competicao, equipa, chicharo, chicharo da serra, santa catarina da serra"
+        content="Trail, Fátima, correr, desporto, competicao, equipa, chicharo, chicharo da serra, santa catarina da serra, Tiago Batista"
         name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
