--- a/events/aporta.html
+++ b/events/aporta.html
@@ -20,7 +20,7 @@
     <title>Portfolio Details - A Porta - Photowalk </title>
     <meta content="10ª edição d'A Porta - Junho - 2025" name="description">
     <meta
-        content="a porta, porta, leiria, fotografia, photowalk"
+        content="a porta, porta, leiria, fotografia, photowalk, tiago batista"
         name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
