--- a/events/bencao-capacetes.html
+++ b/events/bencao-capacetes.html
@@ -19,7 +19,7 @@
 
     <title>Portfolio Details - Bênção Capacetes - Fátima</title>
     <meta content="Bênção Capacetes, IX Peregrinação" name="description">
-    <meta content="bênção capacetes, bênção, capacetes, peregrinação, fátima, fatima, motas, bikes, riding, touring" name="keywords">
+    <meta content="bênção capacetes, bênção, capacetes, peregrinação, fátima, fatima, motas, bikes, riding, touring, Tiago Batista" name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
