--- a/events/carochas.html
+++ b/events/carochas.html
@@ -20,7 +20,7 @@
     <title>Portfolio Details - Carocha Fest - 90 Anos </title>
     <meta content="90 Anos Carocha Fest - Junho - 2025" name="description">
     <meta
-        content="carocha, fest, 90 anos, leiria, fotografia, evento, beetles, carros antigos, carros clássicos, carochas, volkswagen"
+        content="carocha, fest, 90 anos, leiria, fotografia, evento, beetles, carros antigos, carros clássicos, carochas, volkswagen, Tiago Batista"
         name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
