--- a/events/corrida-adepto.html
+++ b/events/corrida-adepto.html
@@ -19,7 +19,7 @@
 
   <title>Portfolio Details - Corrida Adepto</title>
   <meta content="Corrida Adepto, Leiria" name="description">
-  <meta content="Corrida Adepto, Corrida" name="keywords">
+  <meta content="Corrida Adepto, Corrida, Tiago Batista" name="keywords">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
