--- a/events/fatima-12-maio.html
+++ b/events/fatima-12-maio.html
@@ -19,7 +19,7 @@
 
   <title>Portfolio Details - Fátima 12 Maio</title>
   <meta content="12 Maio - Fátima" name="description">
-  <meta content="Fátima, 12 Maio, doze maio" name="keywords">
+  <meta content="Fátima, 12 Maio, doze maio, Tiago Batista" name="keywords">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
