--- a/events/festa-das-rosas.html
+++ b/events/festa-das-rosas.html
@@ -19,7 +19,7 @@
 
     <title>Portfolio Details - Festa das Rosas - Vila Franca</title>
     <meta content="Festa das Rosas, Vila Franca" name="description">
-    <meta content="Festa das Rosas, Vila Franca, Vila Franca do Lima" name="keywords">
+    <meta content="Festa das Rosas, Vila Franca, Vila Franca do Lima, Tiago Batista" name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
