--- a/events/fna.html
+++ b/events/fna.html
@@ -20,7 +20,7 @@
     <title>Portfolio Details - Feira Nacional da Agricultura</title>
     <meta content="Feira Nacional da Agricultura - Junho - 2025" name="description">
     <meta
-        content="animais, quinta, cavalos, ovelhas, bois, vacas, feira, feira nacional Agricultura, ribatejo, santarem, feira do ribatejo"
+        content="animais, quinta, cavalos, ovelhas, bois, vacas, feira, feira nacional Agricultura, ribatejo, santarem, feira do ribatejo, tiago batista"
         name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
