--- a/events/la-vuelta.html
+++ b/events/la-vuelta.html
@@ -19,7 +19,7 @@
 
     <title>Portfolio Details - La Vuelta - Fátima</title>
     <meta content="Fátima, La Vuelta" name="description">
-    <meta content="Fátima, La Vuelta, Vuelta, Volta a Espanha, Espanha, Volta" name="keywords">
+    <meta content="Fátima, La Vuelta, Vuelta, Volta a Espanha, Espanha, Volta, Tiago Batista" name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
