--- a/events/leiria-medieval-2025.html
+++ b/events/leiria-medieval-2025.html
@@ -19,7 +19,7 @@
 
     <title>Portfolio Details - Leiria Medieval 2025</title>
     <meta content="Leiria Medieval 2025 - Julho - 2025" name="description">
-    <meta content="fotografia, leiria, medieval, 2025, eventos, antigo, cavalos, jousting, " name="keywords">
+    <meta content="fotografia, leiria, medieval, 2025, eventos, antigo, cavalos, jousting, tiago batista" name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
