--- a/events/leiria-medieval.html
+++ b/events/leiria-medieval.html
@@ -19,7 +19,7 @@
 
     <title>Portfolio Details - Feira Medieval - Leiria</title>
     <meta content="Leiria, Feira Medieval" name="description">
-    <meta content="Leiria, Medieval, Feira, Feira Medieval" name="keywords">
+    <meta content="Leiria, Medieval, Feira, Feira Medieval, Tiago Batista" name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
