--- a/events/leiria-run.html
+++ b/events/leiria-run.html
@@ -20,7 +20,7 @@
     <title>Portfolio Details - 10ª edição do Leiria Run </title>
     <meta content="10ª edição do Leiria Run - Maio - 2025" name="description">
     <meta
-        content="correr, desporto, competicao, equipa, estrada, meia maratona, corrida, fatima, fátima, vencer, winning, trail"
+        content="correr, desporto, competicao, equipa, estrada, meia maratona, corrida, fatima, fátima, vencer, winning, trail, tiago batista"
         name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
