--- a/events/leiria-sobre-rodas-24.html
+++ b/events/leiria-sobre-rodas-24.html
@@ -19,7 +19,7 @@
 
     <title>Portfolio Details - Leiria sobre rodas</title>
     <meta content="Leiria sobre rodas - Leiria - 2024" name="description">
-    <meta content="rodas, leira, leiria sobre rodas, carros, rally, tunning, jantes, competição, competition, stage" name="keywords">
+    <meta content="rodas, leira, leiria sobre rodas, carros, rally, tunning, jantes, competição, competition, stage, tiago batista" name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
