--- a/events/meia-maratona.html
+++ b/events/meia-maratona.html
@@ -19,7 +19,7 @@
 
   <title>Portfolio Details - Meia Maratona</title>
   <meta content="Meia Maratona, Leira" name="description">
-  <meta content="Maratona, Meia Maratona, Leiria" name="keywords">
+  <meta content="Maratona, Meia Maratona, Leiria, Tiago Batista" name="keywords">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
