--- a/events/monte-real-24.html
+++ b/events/monte-real-24.html
@@ -19,7 +19,7 @@
 
     <title>Portfolio Details - Base Aberta - Monte Real</title>
     <meta content="Monte Real, Base Aberta" name="description">
-    <meta content="Monte real, leiria, base aberta, base aerea n 5, avioes, caças, engenharia, batistmos voo, voo" name="keywords">
+    <meta content="Monte real, leiria, base aberta, base aerea n 5, avioes, caças, engenharia, batistmos voo, voo, tiago batista" name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
