--- a/events/obidos-vila-natal.html
+++ b/events/obidos-vila-natal.html
@@ -20,7 +20,7 @@
     <title>Portfolio Details - Óbidos Vila Natal </title>
     <meta content="Óbidos Vila Natal - Dezembro - 2024" name="description">
     <meta
-        content="natal, obidos, castelo, castle, christmas, xmas"
+        content="natal, obidos, castelo, castle, christmas, xmas, lights, iluminaçao, tiago batista"
         name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
