--- a/events/ocr-leiria-2025.html
+++ b/events/ocr-leiria-2025.html
@@ -20,7 +20,7 @@
     <title>Portfolio Details - 6ª edição da OCR Police Challenge </title>
     <meta content="6ª edição da OCR Police Challenge - Julho - 2025" name="description">
     <meta
-        content="OCR, OCR Leiria, OCR Police Challenge, OCR Portugal, OCR 2025, OCR Leiria 2025, OCR Challenge, OCR Leiria Challenge, OCR Police, OCR Police Challenge 2025, OCR Leiria 2025 Challenge, sports, team sports, obstacle course racing, OCR events, OCR competition, OCR Leiria 2025 event"
+        content="OCR, OCR Leiria, OCR Police Challenge, OCR Portugal, OCR 2025, OCR Leiria 2025, OCR Challenge, OCR Leiria Challenge, OCR Police, OCR Police Challenge 2025, OCR Leiria 2025 Challenge, sports, team sports, obstacle course racing, OCR events, OCR competition, OCR Leiria 2025 event, tiago batista"
         name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
