--- a/events/ocr-police-challenge-leiria.html
+++ b/events/ocr-police-challenge-leiria.html
@@ -19,7 +19,7 @@
 
     <title>Portfolio Details - OCR Police Challenge - Leiria</title>
     <meta content="OCR Police Challenge, Leiria" name="description">
-    <meta content="OCR Police Challenge, leiria" name="keywords">
+    <meta content="OCR Police Challenge, leiria, tiago batista" name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
