--- a/events/patinaliz.html
+++ b/events/patinaliz.html
@@ -20,7 +20,7 @@
     <title>Portfolio Details - I Festival Patinaliz </title>
     <meta content="I Festival Patinaliz - Dezembro - 2024" name="description">
     <meta
-        content="patinagem, patinaliz, leiria, patins, filme, movies, rollerskating"
+        content="patinagem, patinaliz, leiria, patins, filme, movies, rollerskating, rollerskate, tiago batista"
         name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
