--- a/events/pavilhao-conhecimento.html
+++ b/events/pavilhao-conhecimento.html
@@ -19,7 +19,7 @@
 
     <title>Portfolio Details - Pavilhão Conhecimento</title>
     <meta content="Pavilhão Conhecimento - Lisboa - 2024" name="description">
-    <meta content="Pavilhão Conhecimento, pavilhao conhecimento, lisboa, ciencia, ciencia viva, ciência, experiencias, pixar, acienciadapixar" name="keywords">
+    <meta content="Pavilhão Conhecimento, pavilhao conhecimento, lisboa, ciencia, ciencia viva, ciência, experiencias, pixar, acienciadapixar, tiago batista" name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
