--- a/events/piodao-foz-degua.html
+++ b/events/piodao-foz-degua.html
@@ -19,7 +19,7 @@
 
   <title>Portfolio Details - Piodão e Foz D'Égua</title>
   <meta content="Piodão e Foz D'Égua" name="description">
-  <meta content="Piodão, Foz D'Égua" name="keywords">
+  <meta content="Piodão, Foz D'Égua, Tiago Batista" name="keywords">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
