--- a/events/pombal.html
+++ b/events/pombal.html
@@ -20,7 +20,7 @@
     <title>Portfolio Details - Pombal</title>
     <meta content="Pombal - Maio - 2025" name="description">
     <meta
-        content="Pombal, mercado barroco, barroco, museu, leiria. castelo, castelo pombal"
+        content="Pombal, mercado barroco, barroco, museu, leiria. castelo, castelo pombal, tiago batista"
         name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
