--- a/events/pumptrack.html
+++ b/events/pumptrack.html
@@ -20,7 +20,7 @@
     <title>Portfolio Details - Pump Track World Championships Qualifier </title>
     <meta content="Pump Track World Championships Qualifier - Julho - 2025" name="description">
     <meta
-        content="pump track, world championships, qualifier, fotografia, evento, riders, competition, bike, cycling, sports, velosolutions, loureira, portugal, bmx"
+        content="pump track, world championships, qualifier, fotografia, evento, riders, competition, bike, cycling, sports, velosolutions, loureira, portugal, bmx, mountain bike, tiago batista"
         name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
