--- a/events/rally-auren.html
+++ b/events/rally-auren.html
@@ -20,7 +20,7 @@
     <title>Portfolio Details - Rally Terras Auren </title>
     <meta content="Rally Terras Auren - Abril - 2025" name="description">
     <meta
-        content="carros, rally, competição, competition, stage, rallye, auren, fatima, auren"
+        content="carros, rally, competição, competition, stage, rallye, auren, fatima, auren, tiago batista"
         name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
