--- a/events/rampa-reg-fetal.html
+++ b/events/rampa-reg-fetal.html
@@ -20,7 +20,7 @@
     <title>Portfolio Details - Rampa do Reguengo do Fetal </title>
     <meta content="Rampa do Reguengo do Fetal - Abril - 2025" name="description">
     <meta
-        content="carros, rally, competição, competition, stage, rallye, auren, batalha"
+        content="carros, rally, competição, competition, stage, rallye, auren, batalha, Tiago Batista"
         name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
