--- a/events/serra-estrela.html
+++ b/events/serra-estrela.html
@@ -19,7 +19,7 @@
 
   <title>Portfolio Details - Serra Estrela</title>
   <meta content="Serra Estrela" name="description">
-  <meta content="Serra Estrela" name="keywords">
+  <meta content="Serra Estrela, Tiago Batista" name="keywords">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
