--- a/events/trail-agroal.html
+++ b/events/trail-agroal.html
@@ -20,7 +20,7 @@
     <title>Portfolio Details - 3ª edição Agroal Trail</title>
     <meta content="3ª edição Agroal Trail - Junho - 2025" name="description">
     <meta
-        content="correr, desporto, competicao, equipa, corrida, agroal, vencer, winning, trail"
+        content="correr, desporto, competicao, equipa, corrida, agroal, vencer, winning, trail, Tiago Batista"
         name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
