--- a/events/trilhos-pastor.html
+++ b/events/trilhos-pastor.html
@@ -19,7 +19,7 @@
 
     <title>Portfolio Details - 	15ª edição dos Trilhos do Pastor</title>
     <meta content="15ª edição dos Trilhos do Pastor - Abril - 2025" name="description">
-    <meta content="Trail, Batalha, correr, desporto, competicao, equipa" name="keywords">
+    <meta content="Trail, Batalha, correr, desporto, competicao, equipa, Tiago Batista" name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
