--- a/events/vespas-fatima-24.html
+++ b/events/vespas-fatima-24.html
@@ -19,7 +19,7 @@
 
     <title>Portfolio Details - 18ª Concentração Vespinga - Fátima</title>
     <meta content="Fátima, 18ª Concentração Vespinga" name="description">
-    <meta content="Fátima, concentração vespinga, vespinga, vespas, motos, concentração, concentracao, vespa, vespa clube de fátima, portugal, benção" name="keywords">
+    <meta content="Fátima, concentração vespinga, vespinga, vespas, motos, concentração, concentracao, vespa, vespa clube de fátima, portugal, benção, Tiago Batista" name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
