--- a/events/world-of-hans-zimmer.html
+++ b/events/world-of-hans-zimmer.html
@@ -19,7 +19,7 @@
 
   <title>Portfolio Details - The World of Hans Zimmer</title>
   <meta content="The World of Hans Zimmer" name="description">
-  <meta content="The World of Hans Zimmer, Hans, Zimmer" name="keywords">
+  <meta content="The World of Hans Zimmer, Hans, Zimmer, Tiago Batista" name="keywords">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
