--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://www.athinghedid.com/">
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="perfil do tiago batista com fotografias das viagens e eventos atendidos" name="description">
+  <meta content="tiago batista, tiago, fotografia, viagens, eventos" name="keywords">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
@@ -1031,7 +1031,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span>&nbsp;& <br> Tiago 2024</strong>
+        &copy; Copyright <strong><span>iPortfolio</span>&nbsp;& <br> Tiago Batista 2024</strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
