--- a/events/11-trail-fatima.html
+++ b/events/11-trail-fatima.html
@@ -19,7 +19,7 @@
 
     <title>Portfolio Details - 	11º Trail de Fátima</title>
     <meta content="	11º Trail de Fátima - Outubro - 2024" name="description">
-    <meta content="Trail, Fátima, correr, desporto, competicao, equipa" name="keywords">
+    <meta content="Trail, Fátima, correr, desporto, competicao, equipa, Tiago Batista" name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
