--- a/events/beja.html
+++ b/events/beja.html
@@ -19,7 +19,7 @@
 
   <title>Portfolio Details - Beja</title>
   <meta content="Beja" name="description">
-  <meta content="Beja" name="keywords">
+  <meta content="Beja, Tiago Batista" name="keywords">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
