--- a/events/fnac-maratonas.html
+++ b/events/fnac-maratonas.html
@@ -19,7 +19,7 @@
 
     <title>Portfolio Details - Maratonas Fotográficas FNAC</title>
     <meta content="Maratonas Fotográficas FNAC - Junho - 2025" name="description">
-    <meta content="fotografia, torres novas, vila nova da barquinha, barquinha, fotos, concurso, fnac" name="keywords">
+    <meta content="fotografia, torres novas, vila nova da barquinha, barquinha, fotos, concurso, fnac, tiago batista" name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
