--- a/events/magusto-pias-longas.html
+++ b/events/magusto-pias-longas.html
@@ -19,7 +19,7 @@
 
     <title>Portfolio Details - 	Pias Longas - Magusto</title>
     <meta content="Magusta, Pias Longas - Outubro - 2024" name="description">
-    <meta content="magusto, castanhas, pias longas, aviao, avioneta, aviacao, batismo voo" name="keywords">
+    <meta content="magusto, castanhas, pias longas, aviao, avioneta, aviacao, batismo voo, tiago batista" name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
