--- a/events/meia-maratona-fatima.html
+++ b/events/meia-maratona-fatima.html
@@ -20,7 +20,7 @@
     <title>Portfolio Details - Meia Maratona Fátima </title>
     <meta content="Primeira Meia Maratona Fátima - Março - 2025" name="description">
     <meta
-        content="correr, desporto, competicao, equipa, estrada, meia maratona, corrida, fatima, fátima, vencer, winning"
+        content="correr, desporto, competicao, equipa, estrada, meia maratona, corrida, fatima, fátima, vencer, winning, tiago batista"
         name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
