--- a/events/nascente-rio-liz.html
+++ b/events/nascente-rio-liz.html
@@ -19,7 +19,7 @@
 
   <title>Portfolio Details - Nascente do Rio Liz</title>
   <meta content="Nascente do Rio Lis" name="description">
-  <meta content="Nascente, Rio, Lis, Rio Lis" name="keywords">
+  <meta content="Nascente, Rio, Lis, Rio Lis, Tiago Batista" name="keywords">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
