--- a/events/rolamentos.html
+++ b/events/rolamentos.html
@@ -20,7 +20,7 @@
     <title>Portfolio Details - 23ª Rodas D'Aço </title>
     <meta content="23ª Rodas D'Aço - Julho - 2025" name="description">
     <meta
-        content="carros de rolamentos, eventos de rolametos, 23ª Rodas D'Aço, batalha, golpilheira, Portugal, fotografia de eventos, rolamentos, rodas daco, centro recreativo da golpilheira"
+        content="carros de rolamentos, eventos de rolametos, 23ª Rodas D'Aço, batalha, golpilheira, Portugal, fotografia de eventos, rolamentos, rodas daco, centro recreativo da golpilheira, tiago batista"
         name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
