--- a/events/sabugal.html
+++ b/events/sabugal.html
@@ -20,7 +20,7 @@
     <title>Portfolio Details - Presépio Sabugal </title>
     <meta content="Presépio Sabugal  - Dezembro - 2024" name="description">
     <meta
-        content="natal, presepio, christmas, jesus, baby jesus, sabugal, sortelha, nativity, nativity scene"
+        content="natal, presepio, christmas, jesus, baby jesus, sabugal, sortelha, nativity, nativity scene, tiago batista"
         name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
