--- a/events/tomar.html
+++ b/events/tomar.html
@@ -20,7 +20,7 @@
     <title>Portfolio Details - Tomar </title>
     <meta content="Tomar - Março - 2025" name="description">
     <meta
-        content="tomar, passeio, cidade, templario, fosforo, museu do fosforo, colecao, collection, matches"
+        content="tomar, passeio, cidade, templario, fosforo, museu do fosforo, colecao, collection, matches, Tiago Batista"
         name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
