--- a/events/valencia.html
+++ b/events/valencia.html
@@ -19,7 +19,7 @@
 
     <title>Portfolio Details - Valência</title>
     <meta content="Valência - Setembro - 2025" name="description">
-    <meta content="fotografia, espanha, valencia, street photography, street market, big city, city life, holiday, cars, gumball 3000, gumball, supercar" name="keywords">
+    <meta content="fotografia, espanha, valencia, street photography, street market, big city, city life, holiday, cars, gumball 3000, gumball, supercar, Tiago Batista" name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
