--- a/events/zoo-lisboa.html
+++ b/events/zoo-lisboa.html
@@ -25,7 +25,7 @@
      giraffe enclosure, crocodile pond, kangaroo pen, bird aviary, snake house, tiger cage, elephant enclosure
       hippopotamus pool, gorilla habitat, flamingo pond, zookeeper, animal keeper, conservation center, exotic animals, herpetarium, nocturnal house,
       primate exhibit, tropical rainforest, savannah area, penguin pool, animal shows, educational programs, animal behavior, feeding time,
-      animal species, endangered animals, and animal enrichment" name="keywords">
+      animal species, endangered animals, and animal enrichment, Tiago Batista" name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
