--- a/events/11-trail-barreira.html
+++ b/events/11-trail-barreira.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - 	11º Trail Off-Road da Barreira </title>
+    <title>Portfolio Details - 	11º Trail Off-Road da Barreira by Tiago Batista</title>
     <meta content="	11º Trail Off-Road da Barreira - Fevereiro - 2025" name="description">
     <meta
         content="Trail, Barreira, correr, desporto, competicao, equipa, offroad, Tiago Batista"
