--- a/events/11-trail-fatima.html
+++ b/events/11-trail-fatima.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - 	11º Trail de Fátima</title>
+    <title>Portfolio Details - 	11º Trail de Fátima by Tiago Batista</title>
     <meta content="	11º Trail de Fátima - Outubro - 2024" name="description">
     <meta content="Trail, Fátima, correr, desporto, competicao, equipa, Tiago Batista" name="keywords">
 
