--- a/events/beja.html
+++ b/events/beja.html
@@ -17,7 +17,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Beja</title>
+  <title>Portfolio Details - Beja by Tiago Batista</title>
   <meta content="Beja" name="description">
   <meta content="Beja, Tiago Batista" name="keywords">
 
