--- a/events/bencao-capacetes.html
+++ b/events/bencao-capacetes.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - Bênção Capacetes - Fátima</title>
+    <title>Portfolio Details - Bênção Capacetes - Fátima by Tiago Batista</title>
     <meta content="Bênção Capacetes, IX Peregrinação" name="description">
     <meta content="bênção capacetes, bênção, capacetes, peregrinação, fátima, fatima, motas, bikes, riding, touring, Tiago Batista" name="keywords">
 
