--- a/events/carochas.html
+++ b/events/carochas.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - Carocha Fest - 90 Anos </title>
+    <title>Portfolio Details - Carocha Fest - 90 Anos by Tiago Batista</title>
     <meta content="90 Anos Carocha Fest - Junho - 2025" name="description">
     <meta
         content="carocha, fest, 90 anos, leiria, fotografia, evento, beetles, carros antigos, carros clássicos, carochas, volkswagen, Tiago Batista"
