--- a/events/fatima-12-maio.html
+++ b/events/fatima-12-maio.html
@@ -17,7 +17,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Fátima 12 Maio</title>
+  <title>Portfolio Details - Fátima 12 Maio by Tiago Batista</title>
   <meta content="12 Maio - Fátima" name="description">
   <meta content="Fátima, 12 Maio, doze maio, Tiago Batista" name="keywords">
 
