--- a/events/fnac-maratonas.html
+++ b/events/fnac-maratonas.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - Maratonas Fotográficas FNAC</title>
+    <title>Portfolio Details - Maratonas Fotográficas FNAC by Tiago Batista</title>
     <meta content="Maratonas Fotográficas FNAC - Junho - 2025" name="description">
     <meta content="fotografia, torres novas, vila nova da barquinha, barquinha, fotos, concurso, fnac, tiago batista" name="keywords">
 
