--- a/events/la-vuelta.html
+++ b/events/la-vuelta.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - La Vuelta - Fátima</title>
+    <title>Portfolio Details - La Vuelta - Fátima by Tiago Batista</title>
     <meta content="Fátima, La Vuelta" name="description">
     <meta content="Fátima, La Vuelta, Vuelta, Volta a Espanha, Espanha, Volta, Tiago Batista" name="keywords">
 
