--- a/events/leiria-medieval-2025.html
+++ b/events/leiria-medieval-2025.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - Leiria Medieval 2025</title>
+    <title>Portfolio Details - Leiria Medieval 2025 by Tiago Batista</title>
     <meta content="Leiria Medieval 2025 - Julho - 2025" name="description">
     <meta content="fotografia, leiria, medieval, 2025, eventos, antigo, cavalos, jousting, tiago batista" name="keywords">
 
