--- a/events/leiria-medieval.html
+++ b/events/leiria-medieval.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - Feira Medieval - Leiria</title>
+    <title>Portfolio Details - Feira Medieval - Leiria by Tiago Batista</title>
     <meta content="Leiria, Feira Medieval" name="description">
     <meta content="Leiria, Medieval, Feira, Feira Medieval, Tiago Batista" name="keywords">
 
