--- a/events/leiria-run.html
+++ b/events/leiria-run.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - 10ª edição do Leiria Run </title>
+    <title>Portfolio Details - 10ª edição do Leiria Run by Tiago Batista</title>
     <meta content="10ª edição do Leiria Run - Maio - 2025" name="description">
     <meta
         content="correr, desporto, competicao, equipa, estrada, meia maratona, corrida, fatima, fátima, vencer, winning, trail, tiago batista"
