--- a/events/leiria-sobre-rodas-24.html
+++ b/events/leiria-sobre-rodas-24.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - Leiria sobre rodas</title>
+    <title>Portfolio Details - Leiria sobre rodas by Tiago Batista</title>
     <meta content="Leiria sobre rodas - Leiria - 2024" name="description">
     <meta content="rodas, leira, leiria sobre rodas, carros, rally, tunning, jantes, competição, competition, stage, tiago batista" name="keywords">
 
