--- a/events/meia-maratona-fatima.html
+++ b/events/meia-maratona-fatima.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - Meia Maratona Fátima </title>
+    <title>Portfolio Details - Meia Maratona Fátima by Tiago Batista</title>
     <meta content="Primeira Meia Maratona Fátima - Março - 2025" name="description">
     <meta
         content="correr, desporto, competicao, equipa, estrada, meia maratona, corrida, fatima, fátima, vencer, winning, tiago batista"
