--- a/events/monte-real-24.html
+++ b/events/monte-real-24.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - Base Aberta - Monte Real</title>
+    <title>Portfolio Details - Base Aberta - Monte Real by Tiago Batista</title>
     <meta content="Monte Real, Base Aberta" name="description">
     <meta content="Monte real, leiria, base aberta, base aerea n 5, avioes, caças, engenharia, batistmos voo, voo, tiago batista" name="keywords">
 
