--- a/events/nascente-rio-liz.html
+++ b/events/nascente-rio-liz.html
@@ -17,7 +17,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Nascente do Rio Liz</title>
+  <title>Portfolio Details - Nascente do Rio Liz by Tiago Batista</title>
   <meta content="Nascente do Rio Lis" name="description">
   <meta content="Nascente, Rio, Lis, Rio Lis, Tiago Batista" name="keywords">
 
