--- a/events/obidos-vila-natal.html
+++ b/events/obidos-vila-natal.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - Óbidos Vila Natal </title>
+    <title>Portfolio Details - Óbidos Vila Natal by Tiago Batista</title>
     <meta content="Óbidos Vila Natal - Dezembro - 2024" name="description">
     <meta
         content="natal, obidos, castelo, castle, christmas, xmas, lights, iluminaçao, tiago batista"
