--- a/events/ocr-leiria-2025.html
+++ b/events/ocr-leiria-2025.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - 6ª edição da OCR Police Challenge </title>
+    <title>Portfolio Details - 6ª edição da OCR Police Challenge by Tiago Batista</title>
     <meta content="6ª edição da OCR Police Challenge - Julho - 2025" name="description">
     <meta
         content="OCR, OCR Leiria, OCR Police Challenge, OCR Portugal, OCR 2025, OCR Leiria 2025, OCR Challenge, OCR Leiria Challenge, OCR Police, OCR Police Challenge 2025, OCR Leiria 2025 Challenge, sports, team sports, obstacle course racing, OCR events, OCR competition, OCR Leiria 2025 event, tiago batista"
