--- a/events/ocr-police-challenge-leiria.html
+++ b/events/ocr-police-challenge-leiria.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - OCR Police Challenge - Leiria</title>
+    <title>Portfolio Details - OCR Police Challenge - Leiria by Tiago Batista</title>
     <meta content="OCR Police Challenge, Leiria" name="description">
     <meta content="OCR Police Challenge, leiria, tiago batista" name="keywords">
 
