--- a/events/piodao-foz-degua.html
+++ b/events/piodao-foz-degua.html
@@ -17,7 +17,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Piodão e Foz D'Égua</title>
+  <title>Portfolio Details - Piodão e Foz D'Égua by Tiago Batista</title>
   <meta content="Piodão e Foz D'Égua" name="description">
   <meta content="Piodão, Foz D'Égua, Tiago Batista" name="keywords">
 
