--- a/events/pumptrack.html
+++ b/events/pumptrack.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - Pump Track World Championships Qualifier </title>
+    <title>Portfolio Details - Pump Track World Championships Qualifier by Tiago Batista</title>
     <meta content="Pump Track World Championships Qualifier - Julho - 2025" name="description">
     <meta
         content="pump track, world championships, qualifier, fotografia, evento, riders, competition, bike, cycling, sports, velosolutions, loureira, portugal, bmx, mountain bike, tiago batista"
