--- a/events/rally-auren.html
+++ b/events/rally-auren.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - Rally Terras Auren </title>
+    <title>Portfolio Details - Rally Terras Auren by Tiago Batista</title>
     <meta content="Rally Terras Auren - Abril - 2025" name="description">
     <meta
         content="carros, rally, competição, competition, stage, rallye, auren, fatima, auren, tiago batista"
