--- a/events/rolamentos.html
+++ b/events/rolamentos.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - 23ª Rodas D'Aço </title>
+    <title>Portfolio Details - 23ª Rodas D'Aço by Tiago Batista</title>
     <meta content="23ª Rodas D'Aço - Julho - 2025" name="description">
     <meta
         content="carros de rolamentos, eventos de rolametos, 23ª Rodas D'Aço, batalha, golpilheira, Portugal, fotografia de eventos, rolamentos, rodas daco, centro recreativo da golpilheira, tiago batista"
