--- a/events/trail-agroal.html
+++ b/events/trail-agroal.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - 3ª edição Agroal Trail</title>
+    <title>Portfolio Details - 3ª edição Agroal Trail by Tiago Batista</title>
     <meta content="3ª edição Agroal Trail - Junho - 2025" name="description">
     <meta
         content="correr, desporto, competicao, equipa, corrida, agroal, vencer, winning, trail, Tiago Batista"
