--- a/events/trilhos-pastor.html
+++ b/events/trilhos-pastor.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - 	15ª edição dos Trilhos do Pastor</title>
+    <title>Portfolio Details - 	15ª edição dos Trilhos do Pastor by Tiago Batista</title>
     <meta content="15ª edição dos Trilhos do Pastor - Abril - 2025" name="description">
     <meta content="Trail, Batalha, correr, desporto, competicao, equipa, Tiago Batista" name="keywords">
 
