--- a/events/vespas-fatima-24.html
+++ b/events/vespas-fatima-24.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - 18ª Concentração Vespinga - Fátima</title>
+    <title>Portfolio Details - 18ª Concentração Vespinga - Fátima by Tiago Batista</title>
     <meta content="Fátima, 18ª Concentração Vespinga" name="description">
     <meta content="Fátima, concentração vespinga, vespinga, vespas, motos, concentração, concentracao, vespa, vespa clube de fátima, portugal, benção, Tiago Batista" name="keywords">
 
