--- a/events/world-of-hans-zimmer.html
+++ b/events/world-of-hans-zimmer.html
@@ -17,7 +17,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - The World of Hans Zimmer</title>
+  <title>Portfolio Details - The World of Hans Zimmer by Tiago Batista</title>
   <meta content="The World of Hans Zimmer" name="description">
   <meta content="The World of Hans Zimmer, Hans, Zimmer, Tiago Batista" name="keywords">
 
