--- a/events/zoo-lisboa.html
+++ b/events/zoo-lisboa.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - Jardim Zoológico - Lisboa</title>
+    <title>Portfolio Details - Jardim Zoológico - Lisboa by Tiago Batista</title>
     <meta content="Lisboa, Jardim Zoológico" name="description">
     <meta content="Lisboa, Jardim Zoológico, Zoo, Zoológico, animais, aves, savanah, lince, papagaio,zoological garden,
      zoological park, animal farm, menagerie, vivarium, wildlife park, aviary, reptile house, petting zoo, safari park, animal enclosure,
