--- a/events/7-chicharo.html
+++ b/events/7-chicharo.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - 7º Trail do Chícharo da Serra </title>
+    <title>Portfolio Details - 7º Trail do Chícharo da Serra by Tiago Batista</title>
     <meta content="7º Trail do Chícharo da Serra  - Novembro - 2024" name="description">
     <meta
         content="Trail, Fátima, correr, desporto, competicao, equipa, chicharo, chicharo da serra, santa catarina da serra, Tiago Batista"
