--- a/events/aporta.html
+++ b/events/aporta.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - A Porta - Photowalk </title>
+    <title>Portfolio Details - A Porta - Photowalk by Tiago Batista</title>
     <meta content="10ª edição d'A Porta - Junho - 2025" name="description">
     <meta
         content="a porta, porta, leiria, fotografia, photowalk, tiago batista"
