--- a/events/corrida-adepto.html
+++ b/events/corrida-adepto.html
@@ -17,7 +17,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Corrida Adepto</title>
+  <title>Portfolio Details - Corrida Adepto by Tiago Batista</title>
   <meta content="Corrida Adepto, Leiria" name="description">
   <meta content="Corrida Adepto, Corrida, Tiago Batista" name="keywords">
 
