--- a/events/festa-das-rosas.html
+++ b/events/festa-das-rosas.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - Festa das Rosas - Vila Franca</title>
+    <title>Portfolio Details - Festa das Rosas - Vila Franca by Tiago Batista</title>
     <meta content="Festa das Rosas, Vila Franca" name="description">
     <meta content="Festa das Rosas, Vila Franca, Vila Franca do Lima, Tiago Batista" name="keywords">
 
