--- a/events/fna.html
+++ b/events/fna.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - Feira Nacional da Agricultura</title>
+    <title>Portfolio Details - Feira Nacional da Agricultura by Tiago Batista</title>
     <meta content="Feira Nacional da Agricultura - Junho - 2025" name="description">
     <meta
         content="animais, quinta, cavalos, ovelhas, bois, vacas, feira, feira nacional Agricultura, ribatejo, santarem, feira do ribatejo, tiago batista"
