--- a/events/magusto-pias-longas.html
+++ b/events/magusto-pias-longas.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - 	Pias Longas - Magusto</title>
+    <title>Portfolio Details - 	Pias Longas - Magusto by Tiago Batista</title>
     <meta content="Magusta, Pias Longas - Outubro - 2024" name="description">
     <meta content="magusto, castanhas, pias longas, aviao, avioneta, aviacao, batismo voo, tiago batista" name="keywords">
 
