--- a/events/meia-maratona.html
+++ b/events/meia-maratona.html
@@ -17,7 +17,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Meia Maratona</title>
+  <title>Portfolio Details - Meia Maratona by Tiago Batista</title>
   <meta content="Meia Maratona, Leira" name="description">
   <meta content="Maratona, Meia Maratona, Leiria, Tiago Batista" name="keywords">
 
