--- a/events/patinaliz.html
+++ b/events/patinaliz.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - I Festival Patinaliz </title>
+    <title>Portfolio Details - I Festival Patinaliz by Tiago Batista</title>
     <meta content="I Festival Patinaliz - Dezembro - 2024" name="description">
     <meta
         content="patinagem, patinaliz, leiria, patins, filme, movies, rollerskating, rollerskate, tiago batista"
