--- a/events/pavilhao-conhecimento.html
+++ b/events/pavilhao-conhecimento.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - Pavilhão Conhecimento</title>
+    <title>Portfolio Details - Pavilhão Conhecimento by Tiago Batista</title>
     <meta content="Pavilhão Conhecimento - Lisboa - 2024" name="description">
     <meta content="Pavilhão Conhecimento, pavilhao conhecimento, lisboa, ciencia, ciencia viva, ciência, experiencias, pixar, acienciadapixar, tiago batista" name="keywords">
 
