--- a/events/pombal.html
+++ b/events/pombal.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - Pombal</title>
+    <title>Portfolio Details - Pombal by Tiago Batista</title>
     <meta content="Pombal - Maio - 2025" name="description">
     <meta
         content="Pombal, mercado barroco, barroco, museu, leiria. castelo, castelo pombal, tiago batista"
