--- a/events/rampa-reg-fetal.html
+++ b/events/rampa-reg-fetal.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - Rampa do Reguengo do Fetal </title>
+    <title>Portfolio Details - Rampa do Reguengo do Fetal by Tiago Batista</title>
     <meta content="Rampa do Reguengo do Fetal - Abril - 2025" name="description">
     <meta
         content="carros, rally, competição, competition, stage, rallye, auren, batalha, Tiago Batista"
