--- a/events/sabugal.html
+++ b/events/sabugal.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - Presépio Sabugal </title>
+    <title>Portfolio Details - Presépio Sabugal by Tiago Batista</title>
     <meta content="Presépio Sabugal  - Dezembro - 2024" name="description">
     <meta
         content="natal, presepio, christmas, jesus, baby jesus, sabugal, sortelha, nativity, nativity scene, tiago batista"
