--- a/events/serra-estrela.html
+++ b/events/serra-estrela.html
@@ -17,7 +17,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Serra Estrela</title>
+  <title>Portfolio Details - Serra Estrela by Tiago Batista</title>
   <meta content="Serra Estrela" name="description">
   <meta content="Serra Estrela, Tiago Batista" name="keywords">
 
