--- a/events/tomar.html
+++ b/events/tomar.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - Tomar </title>
+    <title>Portfolio Details - Tomar by Tiago Batista</title>
     <meta content="Tomar - Março - 2025" name="description">
     <meta
         content="tomar, passeio, cidade, templario, fosforo, museu do fosforo, colecao, collection, matches, Tiago Batista"
