--- a/events/valencia.html
+++ b/events/valencia.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - Valência</title>
+    <title>Portfolio Details - Valência by Tiago Batista</title>
     <meta content="Valência - Setembro - 2025" name="description">
     <meta content="fotografia, espanha, valencia, street photography, street market, big city, city life, holiday, cars, gumball 3000, gumball, supercar, Tiago Batista" name="keywords">
 
