--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://www.athinghedid.com/">
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
-  <meta content="perfil do tiago batista com fotografias das viagens e eventos atendidos" name="description">
-  <meta content="tiago batista, tiago, fotografia, viagens, eventos" name="keywords">
+  <meta content="perfil do tiago batista com fotografias das viagens e eventos atendidos e portfolio" name="description">
+  <meta content="tiago batista, tiago, fotografia, viagens, eventos, portfolio" name="keywords">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
@@ -53,7 +53,7 @@
     "@context": "https://schema.org",
     "@type": "WebSite",
     "url": "https://www.athinghedid.com/",
-    "name": "A thing he did - Collection",
+    "name": "A thing he did - Collection - by Tiago Batista",
     "potentialAction": {
       "@type": "SearchAction",
       "target": "https://www.athinghedid.com/?s={search_term_string}",
