--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   <title>A thing he did - Collection by Tiago Batista</title>
   <meta name="robots" content="index, follow">
+  <meta name="description" content="Tiago Batista is a portuguese freelance photographer living in Fátima, Portugal. His portfolio includes event photography, travel photography, sports photography, festivals and landscape photography.">
   <link rel="canonical" href="https://www.athinghedid.com/">
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   <meta content="perfil do tiago batista com fotografias das viagens e eventos atendidos e portfolio" name="description">
